# AdventRust

./: .gitignore  Cargo.toml
src/2015/01/: main.rs
src/2015/02/: main.rs
src/2015/03/: main.rs
src/2015/04/: main.rs
src/2015/05/: main.rs
src/2015/06/: main.rs
src/2015/07/: main.rs
src/2023/06/: main.rs
src/2023/07/: main.rs
src/2023/08/: main.rs
src/2023/09/: main.rs
src/2023/10/: main.rs
src/2023/11/: main.rs
src/2023/12/: main.rs
src/2023/13/: main.rs
src/2023/14/: main.rs
src/2023/15/: main.rs
src/2023/16/: main.rs
src/2023/17/: main.rs
src/2023/18/: main.rs
src/2023/19/: main.rs
src/2024/01/: main.rs
src/2024/02/: main.rs
src/2024/03/: main.rs
src/2024/04/: main.rs
src/2024/05/: main.rs
src/2025/01/: main.rs
src/2025/02/: main.rs
src/2025/03/: main.rs
src/2025/04/: main.rs
src/2025/05/: main.rs
