[package]
name = "AdventRust2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
overflow-checks = true

[dependencies]
cached = "0.46.1"
itertools = "0.12.0"
rayon = "1.8.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "2023-06"
path = "src/2023/06/main.rs"

[[bin]]
name = "2023-07"
path = "src/2023/07/main.rs"

[[bin]]
name = "2023-08"
path = "src/2023/08/main.rs"

[[bin]]
name = "2023-09"
path = "src/2023/09/main.rs"

[[bin]]
name = "2023-10"
path = "src/2023/10/main.rs"

[[bin]]
name = "2023-11"
path = "src/2023/11/main.rs"

[[bin]]
name = "2023-12"
path = "src/2023/12/main.rs"
