[package]
name = "AdventRust2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
overflow-checks = true

[dependencies]
cached = "0.46.1"
itertools = "0.12.0"
lazy_static = "1.5.0"
md5 = "0.7.0"
rayon = "1.8.0"
regex = "1.11.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "2015-01"
path = "src/2015/01/main.rs"

[[bin]]
name = "2015-02"
path = "src/2015/02/main.rs"

[[bin]]
name = "2015-03"
path = "src/2015/03/main.rs"

[[bin]]
name = "2015-04"
path = "src/2015/04/main.rs"

[[bin]]
name = "2015-05"
path = "src/2015/05/main.rs"

[[bin]]
name = "2015-06"
path = "src/2015/06/main.rs"

[[bin]]
name = "2015-07"
path = "src/2015/07/main.rs"

[[bin]]
name = "2023-06"
path = "src/2023/06/main.rs"

[[bin]]
name = "2023-07"
path = "src/2023/07/main.rs"

[[bin]]
name = "2023-08"
path = "src/2023/08/main.rs"

[[bin]]
name = "2023-09"
path = "src/2023/09/main.rs"

[[bin]]
name = "2023-10"
path = "src/2023/10/main.rs"

[[bin]]
name = "2023-11"
path = "src/2023/11/main.rs"

[[bin]]
name = "2023-12"
path = "src/2023/12/main.rs"

[[bin]]
name = "2023-13"
path = "src/2023/13/main.rs"

[[bin]]
name = "2023-14"
path = "src/2023/14/main.rs"

[[bin]]
name = "2023-15"
path = "src/2023/15/main.rs"

[[bin]]
name = "2023-16"
path = "src/2023/16/main.rs"

[[bin]]
name = "2023-17"
path = "src/2023/17/main.rs"

[[bin]]
name = "2023-18"
path = "src/2023/18/main.rs"

[[bin]]
name = "2023-19"
path = "src/2023/19/main.rs"

[[bin]]
name = "2024-01"
path = "src/2024/01/main.rs"

[[bin]]
name = "2024-02"
path = "src/2024/02/main.rs"

[[bin]]
name = "2024-03"
path = "src/2024/03/main.rs"

[[bin]]
name = "2024-04"
path = "src/2024/04/main.rs"

[[bin]]
name = "2024-05"
path = "src/2024/05/main.rs"

[[bin]]
name = "2025-01"
path = "src/2025/01/main.rs"
